@@ -1,3 +1,7 @@
+Tue Aug 16 12:09:09 2005  Søren Sandmann  <sandmann@redhat.com>
+
+	* hw/xfree86/dixmods/Makefile.am: Add ft and type1 modules.
+
 Mon Aug 15 15:41:26 2005  Søren Sandmann  <sandmann@redhat.com>
 
 	* hw/xfree86/dixmods/extmod/Makefile.am (libextmod_la_LIBADD):
